# media-cutter

./: Cargo.toml  LICENSE.txt  README.md
src/: ffmpeg.rs  lib.rs  main.rs  processing.rs
ui/: logo.inline  main.glade
