[package]
name = "media_cutter"
version = "0.1.0"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
gtk = { version = "0.5.0", features = ["v3_10"] }
gio = "0.5.0"
gdk-pixbuf = "0.5.0"
cpal = "0.8.2"
chrono = "0.4"
regex = "1"
lazy_static = "1.2"

